| Summary: | ASTERISK-29736: bridge_channel: Fix for Doxygen | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2021-11-13 04:36:25.000-0600 | Date Closed: | 2021-11-18 09:19:20.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/Bridging Documentation |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) doxygen_bridge_channel.patch | |
| Description: | If all {{WARN_}} are enabled in the file {{doc/asterisk-ng-doxygen.in}}, the following warnings appear in the file {{doxygen.log}}:
{code} include/asterisk/bridge_channel.h:708: warning: argument 'clear_digits' of command @param is not found in the argument list of ast_bridge_channel_feature_digit(struct ast_bridge_channel *bridge_channel, int digit) main/bridge_channel.c:1762: warning: documented empty return type of ast_bridge_channel_feature_digit main/bridge_channel.c:605: warning: documented empty return type of ast_bridge_channel_kick main/bridge_channel.c:222: warning: documented empty return type of ast_bridge_channel_lock_bridge main/bridge_channel.c:1321: warning: documented empty return type of ast_bridge_channel_playfile main/bridge_channel.c:1241: warning: documented empty return type of ast_bridge_channel_run_app main/bridge_channel.c:3174: warning: documented empty return type of ast_bridge_channel_stream_map include/asterisk/bridge_channel.h:708: warning: argument 'clear_digits' of command @param is not found in the argument list of ast_bridge_channel_feature_digit(struct ast_bridge_channel *bridge_channel, int digit) include/asterisk/bridge_channel.h:727: warning: documented empty return type of ast_bridge_channel_feature_digit include/asterisk/bridge_channel.h:691: warning: documented empty return type of ast_bridge_channel_kick include/asterisk/bridge_channel.h:267: warning: documented empty return type of ast_bridge_channel_lock_bridge include/asterisk/bridge_channel.h:541: warning: documented empty return type of ast_bridge_channel_playfile include/asterisk/bridge_channel.h:478: warning: documented empty return type of ast_bridge_channel_run_app include/asterisk/bridge_channel.h:753: warning: documented empty return type of ast_bridge_channel_stream_map include/asterisk/bridge_channel.h:36: warning: expected whitespace after \c command include/asterisk/bridge_channel.h:37: warning: expected whitespace after \c command include/asterisk/bridge_channel.h:38: warning: expected whitespace after \c command include/asterisk/bridge_channel_internal.h:34: warning: unable to resolve reference to 'Ast' for \ref command include/asterisk/bridge_channel_internal.h:172: warning: documented empty return type of bridge_channel_impart_signal {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-11-13 04:36:27.349-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-11-18 09:19:21.719-0600 Change 17356 merged by Friendly Automation: bridge_channel: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17356|https://gerrit.asterisk.org/c/asterisk/+/17356] By: Friendly Automation (friendly-automation) 2021-11-18 09:20:54.957-0600 Change 17360 merged by Friendly Automation: bridge_channel: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17360|https://gerrit.asterisk.org/c/asterisk/+/17360] By: Friendly Automation (friendly-automation) 2021-11-18 09:22:24.480-0600 Change 17355 merged by George Joseph: bridge_channel: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17355|https://gerrit.asterisk.org/c/asterisk/+/17355] By: Friendly Automation (friendly-automation) 2021-11-18 09:22:37.963-0600 Change 17357 merged by George Joseph: bridge_channel: Fix for Doxygen. [https://gerrit.asterisk.org/c/asterisk/+/17357|https://gerrit.asterisk.org/c/asterisk/+/17357] | ||