bridge_channel: Fix for Doxygen.

ASTERISK-29736

Change-Id: Ia5370289e6526001a6b52754b533bcea1a9d7e5c